--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,24 @@
 }
 #keywordIdeas .chart .box-info {
   margin-bottom: 0px;
+  position: relative;
 }
+#keywordIdeas .chart .detailGrafik {
+  top: 68%;
+  left: 42%;
+  position: absolute;
+}
+#keywordIdeas .chart .detailGrafik .btndetailGrafik {
+  color: #29abe2;
+  padding: 5px 15px;
+  border-radius: 20px;
+  background: #ffffff;
+  border: 1px solid #76c9ec;
+}
+#keywordIdeas .chart .detailGrafik .btndetailGrafik p {
+  margin: 0px;
+}
+
 #keywordIdeas .chart .nav-tabs>li{
   width: 200px;
   text-align: center;
@@ -304,13 +321,85 @@
   max-width: 100%;
   vertical-align: middle;
 }
+#modaldetailGrafik .modal-content {
+  border-radius: 15px;
+}
+#modaldetailGrafik .titlepopupgrafik h2 {
+  font-size: 23px;
+  font-weight: 600;
+}
+#modaldetailGrafik .coliconspopup {
+  overflow: hidden;
+}
+#modaldetailGrafik .coliconspopup h2 {
+  font-size: 16px;
+  margin-top: 0px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+#modaldetailGrafik .secvalue {
+  overflow: hidden;
+  margin: 16px 0px;
+}
+#modaldetailGrafik .secvalue .valleft{
+  float: left;
+}
+#modaldetailGrafik .secvalue .valleft p {
+  margin: 0px;
+}
+#modaldetailGrafik .secvalue .valleft p span{
+  color: #b3b3b3;
+}
+#modaldetailGrafik .secvalue .valleft p i{
+  color: #29abe2;
+}
+#modaldetailGrafik .secvalue .valright{
+  float: right;
+}
+#modaldetailGrafik .secvalue .valright p{
+  margin: 0px;
+}
+#modaldetailGrafik .secvalue .valright p span{
+  color: #b3b3b3;
+}
+
+#modaldetailGrafik .secvalue .valright p i{
+  color: #29abe2;
+}
+#modaldetailGrafik .coliconspopup .col-icon-popup {
+  width: 33%;
+  float: left;
+}
+#modaldetailGrafik .coliconspopup .col-icon-popup .iconPopup .media-left img {
+  width: 35px;
+}
+#modaldetailGrafik .coliconspopup .col-icon-popup .iconPopup .media-body h4 {
+  font-size: 13px;
+  color: #9e9e9e;
+  margin-bottom: 0px;
+}
+#modaldetailGrafik .coliconspopup .col-icon-popup .iconPopup .media-body p {
+  margin: 0px;
+  font-weight: 600;
+  font-size: 16px;
+}
+@media (min-width: 768px) {
+  #modaldetailGrafik .modal-dialog {
+    width: 395px;
+    margin: 30px auto;
+  }
+}
+
+
 #modalIG .modal-content {
   border-radius: 30px;
+  padding: 20px;
 }
 #modalIG .modal-content .modalImg {
   float: left;
   width: 50%;
 }
+
 #modalIG .modal-content .modalDesc {
   width: 50%;
   float: left;
